--- a/Productos.html
+++ b/Productos.html
@@ -3,91 +3,241 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Productos - Siman El Salvador</title>
     <link rel="stylesheet" href="./Styles/style.css">
-    <title>Productos Siman</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
 <header>
     <nav>
-        <a href="#" class="logo">SIMAN</a>
-        <ul class="nav-links">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="Productos.html">Productos</a></li>
-            <li><a href="Sobre_nosotros.html">Nosotros</a></li>
-        </ul>
+        <a href="index.html" class="logo">◆SIMAN</a>
+        <div class="nav-icons">
+            <div class="search-container">
+                <input type="text" class="search-input" placeholder="Buscar productos...">
+                <span class="search-icon"><i class="fas fa-search"></i></span>
+            </div>
+            <a href="#" class="icon-link"><i class="far fa-user"></i></a>
+            <a href="#" class="icon-link"><i class="fas fa-shopping-cart"></i></a>
+        </div>
     </nav>
 </header>
 
-<section class="productos-section">
-    <div class="card-img-overlay">
-        <h5 class="card-title">Nuestros Productos.</h5>
+<!-- Navbar secundario -->
+<nav class="secondary-navbar">
+    <div class="secondary-nav-container">
+        <div class="departments-section">
+            <button class="hamburger-menu">
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <span class="departments-text">CATEGORÍAS</span>
+            </button>
+            <div class="dropdown-menu">
+                <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
+                <a href="Productos.html"><i class="fas fa-shopping-bag"></i> Productos</a>
+                <a href="Sobre_nosotros.html"><i class="fas fa-info-circle"></i> Sobre nosotros</a>
+            </div>
+        </div>
+        <ul class="secondary-nav-links">
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="Productos.html">PRODUCTOS</a></li>
+            <li><a href="Sobre_nosotros.html">SOBRE NOSOTROS</a></li>
+        </ul>
     </div>
-    <div class="productos-grid">
+</nav>
 
-        <div class="producto">
-            <img src="./assets/Valentino-perfume.jpg" alt="Perfume Valentino">
-            <h3>Perfume Valentino</h3>
-            <p>Fragancia floral femenina, ideal para ocasiones especiales.</p>
-            <p class="precio">$89.99</p>
-            <a href="#" class="boton-comprar">Comprar</a>
+<!-- Productos Destacados -->
+<section class="productos-section">
+    <div class="productos-container">
+        <h2 class="section-title">NUESTROS PRODUCTOS</h2>
+
+        <div class="productos-grid">
+            <!-- Producto 1 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/valentino-perfume.jpg" alt="Perfume Valentino">
+                    <span class="producto-badge">NUEVO</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Perfume Valentino</h3>
+                    <p class="producto-marca">Fragancia floral femenina</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$99.99</span>
+                        $89.99
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 2 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/smarwatch.webp" alt="Smartwatch Samsung Galaxy">
+                    <span class="producto-badge">OFERTA</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Smartwatch Samsung Galaxy</h3>
+                    <p class="producto-marca">Monitoreo de salud y notificaciones</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$179.99</span>
+                        $159.99
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 3 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/deportivos.webp" alt="Zapatos Deportivos Adidas">
+                    <span class="producto-badge">LIQUIDACIÓN</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Zapatos Deportivos Adidas</h3>
+                    <p class="producto-marca">Comodidad para correr o caminar</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$79.90</span>
+                        $59.90
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 4 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/Azus.webp" alt="Laptop ASUS VivoBook 14">
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Laptop ASUS VivoBook 14</h3>
+                    <p class="producto-marca">Poderosa, ligera para trabajo y estudio</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$599.00</span>
+                        $529.00
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 5 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/bolso.webp" alt="Bolso Michael Kors">
+                    <span class="producto-badge">NUEVO</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Bolso Michael Kors</h3>
+                    <p class="producto-marca">Estilo y elegancia en diseño moderno</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$199.00</span>
+                        $179.00
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 6 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/jbl.webp" alt="Audífonos JBL Tune">
+                    <span class="producto-badge">OFERTA</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Audífonos JBL Tune</h3>
+                    <p class="producto-marca">Sonido envolvente y batería duradera</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$59.99</span>
+                        $49.99
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 7 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/Iphone15.webp" alt="iPhone 15 Pro Max">
+                    <span class="producto-badge">NUEVO</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">iPhone 15 Pro Max 256GB</h3>
+                    <p class="producto-marca">Apple</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$1,499.00</span>
+                        $1,299.00
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
+
+            <!-- Producto 8 -->
+            <div class="producto">
+                <div class="producto-imagen">
+                    <img src="./assets/images/Sony.webp" alt="Sony WH-1000XM5">
+                    <span class="producto-badge">POPULAR</span>
+                </div>
+                <div class="producto-contenido">
+                    <h3 class="producto-titulo">Audífonos Sony WH-1000XM5</h3>
+                    <p class="producto-marca">Sony</p>
+                    <div class="producto-precio">
+                        <span class="producto-precio-original">$349.00</span>
+                        $299.00
+                    </div>
+                    <a href="#" class="boton-comprar">AÑADIR AL CARRITO</a>
+                </div>
+            </div>
         </div>
-
-        <div class="producto">
-            <img src="./assets/smarwatch.webp" alt="Smartwatch Samsung Galaxy">
-            <h3>Smartwatch Samsung Galaxy</h3>
-            <p>Monitoreo de salud, pasos y notificaciones en tu muñeca.</p>
-            <p class="precio">$159.99</p>
-            <a href="#" class="boton-comprar">Comprar</a>
-        </div>
-
-        <div class="producto">
-            <img src="./assets/adidas_rebajas.png" alt="Zapatos Deportivos Adidas">
-            <h3>Zapatos Deportivos Adidas</h3>
-            <p>Comodidad para correr o caminar todo el día.</p>
-            <p class="precio">$59.90</p>
-            <a href="#" class="boton-comprar">Comprar</a>
-        </div>
-
-        <div class="producto">
-            <img src="./assets/Azus.webp" alt="Laptop ASUS VivoBook 14">
-            <h3>Laptop ASUS VivoBook 14</h3>
-            <p>Poderosa, ligera, ideal para trabajo y estudio.</p>
-            <p class="precio">$529.00</p>
-            <a href="#" class="boton-comprar">Comprar</a>
-        </div>
-
-        <div class="producto">
-            <img src="./assets/bolso.webp" alt="Bolso Michael Kors">
-            <h3>Bolso Michael Kors</h3>
-            <p>Estilo y elegancia en un diseño moderno y funcional.</p>
-            <p class="precio">$179.00</p>
-            <a href="#" class="boton-comprar">Comprar</a>
-        </div>
-
-        <div class="producto">
-            <img src="./assets/jbl.webp" alt="Audífonos JBL Tune">
-            <h3>Audífonos JBL Tune</h3>
-            <p>Sonido envolvente, batería duradera y diseño moderno.</p>
-            <p class="precio">$49.99</p>
-            <a href="#" class="boton-comprar">Comprar</a>
-        </div>
-
     </div>
 </section>
 
+<!-- Footer -->
 <footer>
-    <div class="footer-content">
-        <div class="footer-links">
-            <a href="#">Faceboock</a>
-            <a href="#">Instagram</a>
-            <a href="#">Tiktok</a>
+    <div class="footer-container">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <h3>TIENDAS SIMAN</h3>
+                <ul class="footer-links">
+                    <li><a href="sobre-nosotros.html">Encuentra tu tienda</a></li>
+                    <li><a href="sobre-nosotros.html">Horarios y ubicaciones</a></li>
+                    <li><a href="sobre-nosotros.html">Servicios en tienda</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>SERVICIOS</h3>
+                <ul class="footer-links">
+                    <li><a href="#">Crédito Siman</a></li>
+                    <li><a href="#">Facturación electrónica</a></li>
+                    <li><a href="#">Garantías y devoluciones</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>SOBRE SIMAN</h3>
+                <ul class="footer-links">
+                    <li><a href="sobre-nosotros.html">Nuestra historia</a></li>
+                    <li><a href="sobre-nosotros.html">Trabaja con nosotros</a></li>
+                    <li><a href="sobre-nosotros.html">Responsabilidad social</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>CONTÁCTANOS</h3>
+                <ul class="footer-links">
+                    <li><a href="sobre-nosotros.html">Centro de ayuda</a></li>
+                    <li><a href="sobre-nosotros.html">Preguntas frecuentes</a></li>
+                    <li><a href="tel:+50325252525">Teléfono: (503) 2525-2525</a></li>
+                </ul>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Siman El Salvador. Todos los derechos reservados.</p>
+            <p>&copy; 2023 Siman El Salvador. Todos los derechos reservados.</p>
         </div>
     </div>
 </footer>
-
 </body>
 </html>
