--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -3,29 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre Nosotros</title>
+  <title>Sobre Nosotros - Siman El Salvador</title>
   <link rel="stylesheet" href="./Styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 <header>
   <nav>
-    <a href="#" class="logo">SIMAN</a>
-    <ul class="nav-links">
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="Productos.html">Productos</a></li>
-      <li><a href="Sobre_nosotros.html">Nosotros</a></li>
-    </ul>
+    <a href="index.html" class="logo">◆SIMAN</a>
+    <div class="nav-icons">
+      <div class="search-container">
+        <input type="text" class="search-input" placeholder="Buscar productos...">
+        <span class="search-icon"><i class="fas fa-search"></i></span>
+      </div>
+      <a href="#" class="icon-link"><i class="far fa-user"></i></a>
+      <a href="#" class="icon-link"><i class="fas fa-shopping-cart"></i></a>
+    </div>
   </nav>
 </header>
+
+<!-- Navbar secundario -->
+<nav class="secondary-navbar">
+  <div class="secondary-nav-container">
+    <div class="departments-section">
+      <button class="hamburger-menu">
+        <div class="hamburger-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <span class="departments-text">CATEGORÍAS</span>
+      </button>
+      <div class="dropdown-menu">
+        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
+        <a href="Productos.html"><i class="fas fa-shopping-bag"></i> Productos</a>
+        <a href="Sobre_nosotros.html"><i class="fas fa-info-circle"></i> Sobre nosotros</a>
+      </div>
+    </div>
+    <ul class="secondary-nav-links">
+      <li><a href="index.html">INICIO</a></li>
+      <li><a href="Productos.html">PRODUCTOS</a></li>
+      <li><a href="Sobre_nosotros.html">SOBRE NOSOTROS</a></li>
+    </ul>
+  </div>
+</nav>
 
 <!-- Contactos Section -->
 <section class="contactos-section">
   <div class="container">
-    <h1 class="section-title">Contáctanos</h1>
+    <h1 class="section-title">CONTÁCTANOS</h1>
 
     <div class="contactos-grid">
       <div class="contact-card">
-        <div class="contact-icon">📞</div>
+        <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
         <h3 class="contact-title">Teléfono</h3>
         <div class="contact-info">
           <a href="tel:+50322505050">+503 2250-5050</a>
@@ -36,7 +66,7 @@
       </div>
 
       <div class="contact-card">
-        <div class="contact-icon">📧</div>
+        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
         <h3 class="contact-title">Email</h3>
         <div class="contact-info">
           <a href="mailto:info@siman.com">info@siman.com</a>
@@ -47,7 +77,7 @@
       </div>
 
       <div class="contact-card">
-        <div class="contact-icon">📍</div>
+        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
         <h3 class="contact-title">Oficina Central</h3>
         <div class="contact-info">
           Km. 10.5 Carretera a Santa Tecla<br>
@@ -57,7 +87,7 @@
       </div>
 
       <div class="contact-card">
-        <div class="contact-icon">💬</div>
+        <div class="contact-icon"><i class="fab fa-whatsapp"></i></div>
         <h3 class="contact-title">WhatsApp</h3>
         <div class="contact-info">
           <a href="https://wa.me/50370505050">+503 7050-5050</a>
@@ -65,7 +95,7 @@
       </div>
 
       <div class="contact-card">
-        <div class="contact-icon">📱</div>
+        <div class="contact-icon"><i class="fas fa-hashtag"></i></div>
         <h3 class="contact-title">Redes Sociales</h3>
         <div class="contact-info">
           <a href="#">@SimanElSalvador</a>
@@ -76,7 +106,7 @@
       </div>
 
       <div class="contact-card">
-        <div class="contact-icon">🕒</div>
+        <div class="contact-icon"><i class="far fa-clock"></i></div>
         <h3 class="contact-title">Atención al Cliente</h3>
         <div class="contact-info">
           Lunes a Viernes: 8:00 AM - 6:00 PM
@@ -92,7 +122,7 @@
 <!-- Formulario de Contacto -->
 <section class="form-section">
   <div class="form-container">
-    <h2 class="form-title">Envíanos un Mensaje</h2>
+    <h2 class="form-title">ENVÍANOS UN MENSAJE</h2>
 
     <form class="contact-form" action="#" method="POST">
       <div class="form-row">
@@ -130,7 +160,7 @@
         <textarea id="mensaje" name="mensaje" placeholder="Escribe tu mensaje aquí..." required></textarea>
       </div>
 
-      <button type="submit" class="submit-btn">Enviar Mensaje</button>
+      <button type="submit" class="submit-btn">ENVIAR MENSAJE</button>
     </form>
   </div>
 </section>
@@ -138,7 +168,7 @@
 <!-- Horarios y Ubicaciones -->
 <section class="info-section">
   <div class="container">
-    <h2 class="section-title">Nuestras Tiendas</h2>
+    <h2 class="section-title">NUESTRAS TIENDAS</h2>
 
     <div class="info-grid">
       <div class="info-card">
@@ -178,16 +208,50 @@
   </div>
 </section>
 
-
+<!-- Footer -->
 <footer>
-  <div class="footer-content">
-    <div class="footer-links">
-      <a href="#">Faceboock</a>
-      <a href="#">Instagram</a>
-      <a href="#">Tiktok</a>
+  <div class="footer-container">
+    <div class="footer-grid">
+      <div class="footer-col">
+        <h3>TIENDAS SIMAN</h3>
+        <ul class="footer-links">
+          <li><a href="sobre-nosotros.html">Encuentra tu tienda</a></li>
+          <li><a href="sobre-nosotros.html">Horarios y ubicaciones</a></li>
+          <li><a href="sobre-nosotros.html">Servicios en tienda</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h3>SERVICIOS</h3>
+        <ul class="footer-links">
+          <li><a href="#">Crédito Siman</a></li>
+          <li><a href="#">Facturación electrónica</a></li>
+          <li><a href="#">Garantías y devoluciones</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h3>SOBRE SIMAN</h3>
+        <ul class="footer-links">
+          <li><a href="sobre-nosotros.html">Nuestra historia</a></li>
+          <li><a href="sobre-nosotros.html">Trabaja con nosotros</a></li>
+          <li><a href="sobre-nosotros.html">Responsabilidad social</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h3>CONTÁCTANOS</h3>
+        <ul class="footer-links">
+          <li><a href="sobre-nosotros.html">Centro de ayuda</a></li>
+          <li><a href="sobre-nosotros.html">Preguntas frecuentes</a></li>
+          <li><a href="tel:+50325252525">Teléfono: (503) 2525-2525</a></li>
+        </ul>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 Siman El Salvador. Todos los derechos reservados.</p>
+      <p>&copy; 2023 Siman El Salvador. Todos los derechos reservados.</p>
     </div>
   </div>
 </footer>
