FIX: nueva imagen de logo

--- a/Sobre-nosotros.html
+++ b/Sobre-nosotros.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre Nosotros - Siman El Salvador</title>
+  <link rel="icon" href="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/706b4606-8eaf-4c3c-80c6-f428f32fa80e___c0e8cd3ea762f9db4b2bd7751174f7fa.svg" type="image/x-icon">
   <link rel="stylesheet" href="./Styles/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -37,13 +38,13 @@
       <div class="dropdown-menu">
         <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
         <a href="Productos.html"><i class="fas fa-shopping-bag"></i> Productos</a>
-        <a href="Sobre_nosotros.html"><i class="fas fa-info-circle"></i> Sobre nosotros</a>
+        <a href="Sobre-nosotros.html"><i class="fas fa-info-circle"></i> Sobre nosotros</a>
       </div>
     </div>
     <ul class="secondary-nav-links">
       <li><a href="index.html">INICIO</a></li>
       <li><a href="Productos.html">PRODUCTOS</a></li>
-      <li><a href="Sobre_nosotros.html">SOBRE NOSOTROS</a></li>
+      <li><a href="Sobre-nosotros.html">SOBRE NOSOTROS</a></li>
     </ul>
   </div>
 </nav>
@@ -215,9 +216,6 @@
       <div class="footer-col">
         <h3>TIENDAS SIMAN</h3>
         <ul class="footer-links">
-          <li><a href="sobre_nosotros.html">Encuentra tu tienda</a></li>
-          <li><a href="sobre_nosotros.html">Horarios y ubicaciones</a></li>
-          <li><a href="sobre_nosotros.html">Servicios en tienda</a></li>
           <li><a href="sobre-nosotros.html">Encuentra tu tienda</a></li>
           <li><a href="sobre-nosotros.html">Horarios y ubicaciones</a></li>
           <li><a href="sobre-nosotros.html">Servicios en tienda</a></li>
@@ -234,9 +232,6 @@
       <div class="footer-col">
         <h3>SOBRE SIMAN</h3>
         <ul class="footer-links">
-          <li><a href="sobre_nosotros.html">Nuestra historia</a></li>
-          <li><a href="sobre_nosotros.html">Trabaja con nosotros</a></li>
-          <li><a href="sobre_nosotros.html">Responsabilidad social</a></li>
           <li><a href="sobre-nosotros.html">Nuestra historia</a></li>
           <li><a href="sobre-nosotros.html">Trabaja con nosotros</a></li>
           <li><a href="sobre-nosotros.html">Responsabilidad social</a></li>
@@ -245,12 +240,9 @@
       <div class="footer-col">
         <h3>CONTÁCTANOS</h3>
         <ul class="footer-links">
-          <li><a href="sobre_nosotros.html">Centro de ayuda</a></li>
-          <li><a href="sobre_nosotros.html">Preguntas frecuentes</a></li>
-          <li><a href="#">Teléfono: (503) 2525-2525</a></li>
           <li><a href="sobre-nosotros.html">Centro de ayuda</a></li>
           <li><a href="sobre-nosotros.html">Preguntas frecuentes</a></li>
-          <li><a href="tel:+50325252525">Teléfono: (503) 2525-2525</a></li>
+          <li><a href="#">Teléfono: (503) 2525-2525</a></li>
         </ul>
         <div class="social-links">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
